--- a/denverposter.css
+++ b/denverposter.css
@@ -269,7 +269,6 @@ footer {
 
 .image-content img {
   width: 100%; /* Makes sure the image fills its container */
-  max-width: 600px; /* Prevents it from getting too big */
   margin-top: 100px;
 }
 
@@ -314,7 +313,7 @@ footer {
 .full-image img, 
 .full-image-2 img, 
 .full-image-3 img {
-  width: 80%; /* Adjust image width */
+  width: 100%; /* Adjust image width */
   height: auto; /* Maintain aspect ratio */
   object-fit: cover; /* Fills container without distortion */
   display: block;
@@ -353,7 +352,7 @@ footer {
 }
 
 .Flower1 {
-  bottom: 0;
+  bottom: -20px;
   right: 0;
 }
 
@@ -366,7 +365,7 @@ footer {
 @media (max-width: 768px) {
   .Flower1 {
     position: fixed;
-    bottom: 0;
+    bottom: -20px;
     right: 0;
     height: 175px;
   }
