--- a/denverposter.css
+++ b/denverposter.css
@@ -293,7 +293,7 @@ footer {
 /* Body Copy */
 .bodycopy {
   font-size: 12pt;
-  font-family: "Playfair Display", serif;
+  font-family: "Gowun Dodum", serif;
   font-weight: 400;
 }
 
